--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@capacitor/android": "^2.4.7",
     "@capacitor/core": "2.4.7",
     "@capacitor/ios": "^2.4.7",
+    "@ionic-native/core": "^5.31.1",
     "@ionic-native/pedometer": "^5.31.1",
     "@ionic/react": "^5.5.0",
     "@ionic/react-router": "^5.5.0",
