--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@ionic-native/core": "^5.31.1",
     "@ionic-native/pedometer": "^5.31.1",
     "@ionic/react": "^5.5.0",
+    "@ionic/react-hooks": "0.0.8",
     "@ionic/react-router": "^5.5.0",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
