--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@capacitor/ios": "^2.4.7",
     "@ionic-native/core": "^5.31.1",
     "@ionic-native/pedometer": "^5.31.1",
+    "@ionic/pwa-elements": "^3.0.2",
     "@ionic/react": "^5.5.0",
     "@ionic/react-hooks": "0.0.8",
     "@ionic/react-router": "^5.5.0",
