--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@capacitor/core": "2.4.7",
     "@capacitor/ios": "^2.4.7",
     "@ionic-native/core": "^5.31.1",
+    "@ionic-native/health": "^5.31.1",
     "@ionic-native/pedometer": "^5.31.1",
     "@ionic/pwa-elements": "^3.0.2",
     "@ionic/react": "^5.5.0",
@@ -21,6 +22,7 @@
     "@types/react-dom": "^16.9.10",
     "@types/react-router": "^5.1.11",
     "@types/react-router-dom": "^5.1.7",
+    "cordova-plugin-health": "^2.0.0",
     "cordova-plugin-pedometer": "^0.4.1",
     "ionicons": "^5.4.0",
     "react": "^17.0.1",
